# mailwatch

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflow/: publish.yml  test-on-pr.yml
.github/workflows/: publish.yml
src/: api.ts  main.ts  styles.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/alert/: icon.icns
src-tauri/migrations/: 20231025140155_create_accounts_table.up.sql  20240501175023_create_settings_table.down.sql  20240501175023_create_settings_table.up.sql
src-tauri/src/: commands.rs  error.rs  imap.rs  keychain.rs  macros.rs  main.rs  models.rs  watcher.rs
src-tauri/src/commands/: account.rs  connection.rs  mod.rs  settings.rs
src-tauri/src/db/: account.rs  mod.rs  settings.rs
src-tauri/src/handlers/: account.rs  connection.rs  mod.rs
src/Api/: account.ts  connection.ts  index.ts  settings.ts
src/Components/: AccountItem.vue  CustomButton.vue  CustomColorInput.vue  CustomInput.vue  DeleteAccountButton.vue  FormCheckbox.vue  FormSelect.vue  PreferenceBlock.vue  PreferencePanel.vue  TestConnectionButton.vue  index.ts
src/Composables/: formValidation.ts  index.ts
src/Config/: index.ts
src/Layouts/: AppLayout.vue
src/Models/: account.ts  connection.ts  index.ts  settings.ts
src/Router/: index.ts  routes.ts
src/Types/: global.d.ts
src/Views/: AccountForm.vue  Accounts.vue  Settings.vue
src/components/: AccountItem.vue  CloseButton.vue  CustomButton.vue  CustomColorInput.vue  CustomInput.vue  DeleteAccountButton.vue  FormBlock.vue  PreferenceBlock.vue  PreferencePanel.vue  TestConnectionButton.vue  index.ts
src/composables/: formValidation.ts
src/layouts/: AppLayout.vue
src/router/: index.ts  routes.ts
src/views/: AccountForm.vue  Accounts.vue  Settings.vue
