[package]
name = "mailwatch"
version = "0.1.0"
description = "A system tray application that provides real-time notifications for unseen emails across multiple email accounts."
authors = ["Eduardo Stuart <e@s.tuart.me>"]
license = "MIT"
repository = "https://github.com/eduardostuart/mailwatch"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "notification-all", "system-tray", "window-all", "dialog-all", "macos-private-api", "icon-ico"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
anyhow = "1.0.75"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.33.0", features = ["full"] }
imap = { version = "2.4.1"}
native-tls = "0.2.11"
thiserror = "1.0.50"
log = "0.4.20"
simple_logger = "5.0.0"
keyring = "2.0.5"
flume = "0.11.0"
lazy_static = "1.4.0"
rodio = "0.17.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
