[package]
name = "mailwatch"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "notification-all", "system-tray", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize", "dialog-all", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
ring = "0.17.5"
anyhow = "1.0.75"
data-encoding = "2.4.0"
base64 = "0.21.4"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.33.0", features = ["full"] }
imap = { version = "2.4.1"}
native-tls = "0.2.11"
thiserror = "1.0.50"
dirs = "5.0.1"
log = "0.4.20"
simple_logger = "4.2.0"
keyring = "2.0.5"
notify-rust = "4.9.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
